<resources>
    <string name="app_name">Track CoVID19</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="zero">0</string>
    <string name="case_reported">case reported</string>
    <string name="confirmed">confirmed</string>
    <string name="recovered">recovered</string>
    <string name="deaths">deaths</string>
    <string name="tap_on_statistic">Data source : https://covid19.mathdro.id/api/</string>
    <string name="noconnection">No Connection</string>
    <string name="type_city_province_region">Type a City or Country</string>
    <string name="skip">skip</string>

    <string name="slide_1_title">Exclusive Products</string>
    <string name="slide_1_desc">Get products which are unique and only available at our shops !</string>

    <string name="slide_2_title">Cheap Rates</string>
    <string name="slide_2_desc">Products at such an affordable rates !</string>

    <string name="slide_3_title">Hassle Free Payments</string>
    <string name="slide_3_desc">With various pay options , you can easily pay in a minute !</string>

    <string name="slide_4_title">Fast Delivery</string>
    <string name="slide_4_desc">Blazing fast order delivery within time !</string>
    <string name="start">start</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="aboutLabelSubtitle">This is an application to track Novel Corona Virus spread</string>
    <string name="aboutLabelVersion">2.1.0</string>
    <string name="aboutLabelDeveloper">Developers</string>
    <string name="aboutTextDeveloper">Chirag Gada | Manan Shah</string>
    <string name="aboutLabelLicense">License</string>
    <string name="aboutTextLicense">MIT License  Copyright (c) 2020 Chirag Gada</string>
    <string name="aboutLabelDatabase">Database</string>
    <string name="abouTextDatabase">Indian Ministry of Health</string>
    <string name="aboutTextDatabaseTwo">https://api.covid19india.org/</string>
    <string name="find_me_on_github_github_com_whoishusni">Find us on Github</string>
    <string name="github">Github</string>
    <string name="made_with">made with</string>
    <string name="for_human">for human</string>

</resources>
